Fix layout issue

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,6 @@ body {
 
 .content-container {
   padding: 1rem;
-  background-color: #6a6464;
 }
 
 .content-container h3 {
